<resources>
    <string name="app_name">TV Seasons</string>
    <string name="action_settings">Settings</string>
    <string name="card_subtitle">Subtitle</string>
    <string name="title_activity_detail">Details</string>
    <string name="vote_count">123456</string>
    <string name="rating">7.85</string>
    <string name="release_date">00-00-0000</string>
    <string name="overview_title">Overview</string>
    <string name="sample_overview">Demo text for testing...</string>
    <string name="item_click">Item Cilck</string>
    <string name="popularity">34,256</string>
    <string name="trailer_head">Trailers</string>
    <string name="trailer_title">Trailer Title</string>
    <string name="trailer_type">Type</string>
    <string name="eng_us">eng | us</string>
    <string name="cast_name">Cast Name</string>
    <string name="cast_head">Cast</string>
    <string name="action_sortby">Sort by</string>
    <string name="action_sortby_popular">Sort by Popularity</string>
    <string name="action_sortby_rating">Sort by Rating</string>
    <string name="action_vote_count">Set Vote Count</string>
    <string name="pref_key_sort">sort</string>
    <string name="pref_key_vote_count">vote_count</string>
    <string name="pref_key_sort_popular">popular</string>
    <string name="pref_key_sort_top_rating">top_rated</string>
    <string name="vote_cant_be_empty">Vote Count cant be empty</string>
    <string name="vote_changed_success">Vote Count Updated !!!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="empty_text">No Data Available...Please make sure you are connected to the Internet...</string>
</resources>
