<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/trailer_card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/trailer_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailer_title"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dim_5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trailer_title"
                android:textSize="@dimen/trailer_title_textsize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_margin="@dimen/dim_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:weightSum="100"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trailer_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"

                    android:layout_gravity="start"
                    android:text="@string/trailer_type" />

                <TextView
                    android:id="@+id/trailer_eng_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="10"
                    android:text="@string/eng_us" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>