<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--
            Creating AppBar Layout
        -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="?colorPrimary"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="72dp"
            app:collapsedTitleGravity="start"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <!--
                        Creating Toolbar

                        In case we need to add an image in collapsing toolbar place the image view in between collapsing toolbar and Toolbar like here
                        and if dont need it then simply remove image view
            -->

            <ImageView
                android:id="@+id/details_collapsing_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_placeholder"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <!--
                        <android.support.design.widget.Toolbar
            -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin_top"
                android:layout_marginLeft="@dimen/card_margin_top"
                android:layout_marginRight="@dimen/card_margin_top"
                android:elevation="@dimen/dim_5dp"
                android:layout_marginTop="@dimen/dim_10dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/details_thumbnail"
                        android:layout_width="150dp"
                        android:layout_height="220dp"
                        android:layout_margin="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_placeholder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/details_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/details_vote_margin"
                            android:text="@string/release_date"
                            android:textSize="@dimen/vote_text_size"
                            android:textStyle="bold|italic" />

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dim_10dp"
                            app:cardBackgroundColor="@android:color/holo_green_dark"
                            android:layout_margin="@dimen/details_rating_margin"
                            android:elevation="@dimen/dim_10dp"
                            android:background="@android:color/holo_green_dark"
                            app:cardCornerRadius="@dimen/dim_10dp">
                        <TextView
                            android:id="@+id/details_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/holo_green_dark"
                            android:gravity="center"
                            android:padding="@dimen/dim_5dp"
                            android:text="@string/rating"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/rating_text_size"
                            android:textStyle="italic|bold" />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:id="@+id/detail_votes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/details_vote_margin"
                            android:text="@string/vote_count"
                            android:textSize="@dimen/vote_count_text_size"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:id="@+id/details_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/details_vote_margin"
                            android:text="@string/popularity"
                            android:textSize="@dimen/vote_count_text_size"
                            android:textStyle="bold"
                            />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dim_5dp"
                app:cardCornerRadius="@dimen/dim_5dp"
                android:layout_margin="@dimen/details_description_margin"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="0"
                        android:text="@string/overview_title"
                        android:textSize="@dimen/description_head_text_size" />

                    <TextView
                        android:id="@+id/details_overview"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/overview_description_margin_top"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/details_overview_padding"
                        android:text="@string/sample_overview"
                        android:textSize="@dimen/overview_desc_text_size" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:elevation="@dimen/dim_5dp"
                android:layout_margin="@dimen/details_trailer_card_margin"
                app:cardCornerRadius="@dimen/dim_5dp"
                android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/details_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/trailer_head"
                    android:textSize="@dimen/description_head_text_size" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/details_trailer_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="saveFav"
        android:src="@drawable/dislike"
        app:layout_anchor="@+id/app_bar_layout"
        app:layout_anchorGravity="right|bottom" />


</android.support.design.widget.CoordinatorLayout>

    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="dimpesh.com.seasonsandseries.DetailActivityFragment"
        tools:showIn="@layout/activity_detail">


    </RelativeLayout>
    -->
